fix problem with overflow

--- a/src/components/Views/Root.module.scss
+++ b/src/components/Views/Root.module.scss
@@ -13,7 +13,6 @@ body {
   align-items: center;
   font-family: "Montserrat", sans-serif;
   background-color: rgb(130, 235, 175);
-  overflow: hidden;
 }
 
 .wrapper {
